Fix Menu Controller e aggiunta scrollbar

--- a/src/main/resources/com/progetto/progetto/css/base_style.css
+++ b/src/main/resources/com/progetto/progetto/css/base_style.css
@@ -108,7 +108,7 @@
 .button
 {
    -fx-background-color: -ten-color;
-   -fx-font-size: 15px;
+   -fx-font-size: 17px;
    -fx-font-weight: 300;
    -fx-cursor: hand;
    -fx-font-family: 'Roboto',Arial,sans-serif;
